--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
+  "name": "ionic-hello-world",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "build": "ionic-app-scripts build",
+    "watch": "ionic-app-scripts watch",
+    "serve:before": "watch",
+    "emulate:before": "build",
+    "deploy:before": "build",
+    "build:before": "build",
+    "run:before": "build"
+  },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "es6-shim": "0.35.1",
-    "ionic-angular": "2.0.0-beta.11",
-    "ionic-native": "1.3.10",
-    "ionicons": "3.0.0",
-    "pouchdb": "^5.4.5",
+    "ionic-angular": "^2.0.0-rc.0",
+    "ionicons": "^3.0.0",
+    "@ionic/storage": "^1.0.3",
+    "ionic-native": "^2.0.3",
+    "pouchdb": "6.0.6",
     "pouchdb-authentication": "^0.5.3",
-    "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "pouchdb-find": "^0.10.3",
+    "@types/node": "^6.0.41"
   },
   "devDependencies": {
-    "del": "2.2.0",
-    "gulp": "3.9.1",
-    "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-typescript": "2.0.0",
-    "ionic-gulp-fonts-copy": "^1.0.0",
-    "ionic-gulp-html-copy": "^1.0.0",
-    "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^2.0.0",
-    "ionic-gulp-tslint": "^1.0.0",
-    "pouchdb-find": "^0.10.3",
-    "run-sequence": "1.1.5",
-    "tslint-ionic-rules": "0.0.4"
+    "@ionic/app-scripts": "^0.0.23",
+    "@types/pouchdb": "5.4.28",
+    "typescript": "^2.0.3"
   },
   "cordovaPlugins": [
-    "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
+    "cordova-plugin-device",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
@@ -47,6 +43,5 @@
       "locator": "ios"
     }
   ],
-  "name": "bolty",
   "description": "bolty: An Ionic project"
 }
