--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-hello-world",
+  "name": "Bolty",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -13,35 +13,28 @@
     "run:before": "build"
   },
   "dependencies": {
-    "ionic-angular": "^2.0.0-rc.0",
-    "ionicons": "^3.0.0",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/compiler-cli": "0.6.2",
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/platform-server": "^2.0.0",
     "@ionic/storage": "^1.0.3",
-    "ionic-native": "^2.0.3",
-    "pouchdb": "6.0.6",
-    "pouchdb-authentication": "^0.5.3",
-    "pouchdb-find": "^0.10.3",
-    "@types/node": "^6.0.41"
+    "ionic-angular": "^2.0.0-rc.1",
+    "ionic-native": "^2.2.3",
+    "ionicons": "^3.0.0",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.21",
+    "pouchdb": "6.0.7",
+    "pouchdb-authentication": "^0.5.5",
+    "pouchdb-find": "^0.10.3"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^0.0.23",
-    "@types/pouchdb": "5.4.28",
-    "typescript": "^2.0.3"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-device",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
-    }
-  ],
-  "description": "bolty: An Ionic project"
+    "@ionic/app-scripts": "^0.0.36",
+    "typescript": "^2.0.3",
+    "@types/pouchdb": "5.4.28"
+  }
 }
