--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "pouchdb-find": "^0.10.3"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^0.0.36",
-    "typescript": "^2.0.3",
-    "@types/pouchdb": "5.4.28"
+    "@ionic/app-scripts": "0.0.37-3",
+    "@types/pouchdb": "5.4.28",
+    "typescript": "^2.0.3"
   }
 }
