--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
     "run:before": "build"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/compiler-cli": "0.6.2",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/platform-server": "^2.0.0",
-    "@ionic/storage": "^1.0.3",
-    "ionic-angular": "^2.0.0-rc.1",
+    "@angular/common": "2.1.1",
+    "@angular/compiler": "2.1.1",
+    "@angular/compiler-cli": "2.1.1",
+    "@angular/core": "2.1.1",
+    "@angular/forms": "2.1.1",
+    "@angular/http": "2.1.1",
+    "@angular/platform-browser": "2.1.1",
+    "@angular/platform-browser-dynamic": "2.1.1",
+    "@angular/platform-server": "2.1.1",
+    "@ionic/storage": "1.1.6",
+    "ionic-angular": "2.0.0-rc.2",
     "ionic-native": "^2.2.3",
     "ionicons": "^3.0.0",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.21",
+    "zone.js": "0.6.21",
     "pouchdb": "6.0.7",
     "pouchdb-authentication": "^0.5.5",
     "pouchdb-find": "^0.10.3"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.37-3",
+    "@ionic/app-scripts": "0.0.39",
+    "@types/node": "^6.0.46",
     "@types/pouchdb": "5.4.28",
-    "typescript": "^2.0.3"
+    "typescript": "^2.0.6"
   }
 }
