--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "build": "ionic-app-scripts build",
-    "watch": "ionic-app-scripts watch",
+    "serve": "ionic-app-scripts serve",
     "serve:before": "watch",
+    "watch": "ionic-app-scripts watch",
     "emulate:before": "build",
     "deploy:before": "build",
     "build:before": "build",
@@ -33,7 +34,7 @@
     "pouchdb-find": "^0.10.3"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.39",
+    "@ionic/app-scripts": "0.0.43",
     "@types/node": "^6.0.46",
     "@types/pouchdb": "5.4.28",
     "typescript": "^2.0.6"
