--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@angular/platform-browser-dynamic": "2.1.1",
     "@angular/platform-server": "2.1.1",
     "@ionic/storage": "1.1.6",
-    "ionic-angular": "2.0.0-rc.2",
+    "ionic-angular": "^2.0.0-rc.3",
     "ionic-native": "^2.2.3",
     "ionicons": "^3.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.21",
     "pouchdb": "6.0.7",
     "pouchdb-authentication": "^0.5.5",
-    "pouchdb-find": "^0.10.3"
+    "pouchdb-find": "^0.10.3",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.21"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.44",
+    "@ionic/app-scripts": "0.0.46",
     "@types/node": "^6.0.46",
     "@types/pouchdb": "5.4.28",
     "typescript": "^2.0.6"
