--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
-    "ionic-angular": "2.0.0-rc.5",
+    "ionic-angular": "2.1.0",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26",
-    "sw-toolbox": "3.4.0",
     "pouchdb": "6.1.1",
     "pouchdb-authentication": "^0.5.5",
-    "pouchdb-find": "^0.10.3"
+    "pouchdb-find": "^0.10.3",
+    "rxjs": "5.0.0-beta.12",
+    "sw-toolbox": "3.4.0",
+    "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.0.0",
+    "@ionic/app-scripts": "1.1.4",
     "typescript": "2.0.9",
     "@types/node": "^6.0.46",
     "@types/papaparse": "^4.1.28",
