--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
+    "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "serve": "ionic-app-scripts serve",
-    "serve:before": "watch",
-    "watch": "ionic-app-scripts watch",
-    "emulate:before": "build",
-    "deploy:before": "build",
-    "build:before": "build",
-    "run:before": "build"
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
     "@angular/common": "2.2.1",
@@ -25,14 +21,14 @@
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
     "ionic-angular": "2.1.0",
-    "ionic-native": "2.2.11",
+    "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
-    "pouchdb": "6.1.1",
-    "pouchdb-authentication": "^0.5.5",
-    "pouchdb-find": "^0.10.3",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.6.26"
+    "zone.js": "0.6.26",
+    "pouchdb": "6.1.1",
+    "pouchdb-authentication": "^0.5.5",
+    "pouchdb-find": "^0.10.3"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
