--- a/package.json
+++ b/package.json
@@ -4,41 +4,47 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+      "clean": "ionic-app-scripts clean",
+      "build": "ionic-app-scripts build",
+      "ionic:build": "ionic-app-scripts build",
+      "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.1.2",
-    "@angular/compiler": "4.1.2",
-    "@angular/compiler-cli": "4.1.2",
-    "@angular/core": "4.1.2",
-    "@angular/forms": "4.1.2",
-    "@angular/http": "4.1.2",
-    "@angular/platform-browser": "4.1.2",
-    "@angular/platform-browser-dynamic": "4.1.2",
-    "@ionic-native/core": "3.10.2",
-    "@ionic-native/splash-screen": "3.10.2",
-    "@ionic-native/status-bar": "3.10.2",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.3.0",
-    "ionicons": "3.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.11",
-    "pouchdb": "6.1.1",
-    "pouchdb-authentication": "^0.5.5",
-    "pouchdb-find": "^0.10.3"
+      "@angular/common": "4.1.2",
+      "@angular/compiler": "4.1.2",
+      "@angular/compiler-cli": "4.1.2",
+      "@angular/core": "4.1.2",
+      "@angular/forms": "4.1.2",
+      "@angular/http": "4.1.2",
+      "@angular/platform-browser": "4.1.2",
+      "@angular/platform-browser-dynamic": "4.1.2",
+      "@ionic-native/core": "3.10.2",
+      "@ionic-native/splash-screen": "3.10.2",
+      "@ionic-native/status-bar": "3.10.2",
+      "@ionic/storage": "2.0.1",
+      "ionic-angular": "3.3.0",
+      "ionicons": "3.0.0",
+      "rxjs": "5.1.1",
+      "sw-toolbox": "3.6.0",
+      "zone.js": "0.8.11",
+      "pouchdb": "6.1.1",
+      "pouchdb-authentication": "^0.5.5",
+      "pouchdb-find": "^0.10.3",
+      "cordova-browser": "~4.1.0"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.3.7",
-    "typescript": "2.3.3",
-    "@ionic/cli-plugin-cordova": "1.4.0",
-    "@ionic/cli-plugin-ionic-angular": "1.3.1",
-    "@types/node": "^6.0.46",
-    "@types/papaparse": "^4.1.28",
-    "@types/pouchdb": "5.4.28",
-    "papaparse": "^4.1.2"
+      "@ionic/app-scripts": "1.3.7",
+      "typescript": "2.3.3",
+      "@ionic/cli-plugin-cordova": "1.4.0",
+      "@ionic/cli-plugin-ionic-angular": "1.3.1",
+      "@types/node": "^6.0.46",
+      "@types/papaparse": "^4.1.28",
+      "@types/pouchdb": "5.4.28",
+      "papaparse": "^4.1.2"
+  },
+  "cordova": {
+      "platforms": [
+          "browser"
+      ]
   }
 }
